# vapoursynth-ncnn-vulkan

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeRC.cmake  VapourSynthConfig.cmake  compile-shader.cmake  download-ncnn.cmake
scripts/: build.bat
src/: CMakeLists.txt  export-frame-filter.cpp  export-frame-filter.hpp  filter-common.cpp  filter-common.hpp  real-esrgan-filter.cpp  real-esrgan-filter.hpp  real-esrgan.cpp  real-esrgan.hpp  srmd.cpp.bak  srmd.hpp.bak  vsplugin.cpp  vsplugin.hpp  vsw2xnvk.cpp  waifu2x-filter.cpp  waifu2x-filter.hpp  waifu2x.cpp  waifu2x.hpp
